--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,12 +21,17 @@ body {
   --theme-color-rgb: 248, 141, 42;
   --header-btn-width: 11.5rem;
   --header-btn-height: 3.5rem;
-
   --h1-font-size: 3.5rem;
   --h2-font-size: 3rem;
   --h3-font-size: 2.5rem;
   --h4-font-size: 2rem;
   --normal-font-size: 2rem;
+}
+
+
+.content-main-content h4 {
+  font-size: var(--h4-font-size);
+  font-size: 2rem;
 }
 
 /* 粉圓體 */
@@ -984,21 +989,17 @@ a {
   cursor: pointer;
 }
 
+
 .content-main-content h1 {
   font-size: var(--h1-font-size);
 }
 
 .content-main-content h2 {
   font-size: var(--h2-font-size);
-  ;
 }
 
 .content-main-content h3 {
   font-size: var(--h3-font-size);
-}
-
-.content-main-content h4 {
-  font-size: var(--h4-font-size);
 }
 
 .content-main-content button {
